updated memorygame code and added laskarit/viikko3 files

--- a/MemoryGame/pom.xml
+++ b/MemoryGame/pom.xml
@@ -40,7 +40,16 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>  
-        </plugins>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <configLocation>checkstyle.xml</configLocation>
+                </configuration>
+            </plugin>
+        </plugins> 
     </build>
+    <name>MemoryGame</name>
 </project>
