--- a/MemoryGame/pom.xml
+++ b/MemoryGame/pom.xml
@@ -17,6 +17,11 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.20.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -32,6 +37,11 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.0</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/ui/*</exclude>
+                    </excludes>
+                </configuration>  
                 <executions>
                     <execution>
                         <id>default-prepare-agent</id>
@@ -48,6 +58,11 @@
                 <configuration>
                     <configLocation>checkstyle.xml</configLocation>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.5</version>
             </plugin>
         </plugins> 
     </build>
