--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /laskarit/viikko2/Unicafe/nbproject/
 /MemoryGame/target/
 /MemoryGame/nbproject/
+/MemoryGame/HighScores.db
+/MemoryGame/HighScoresTesting.db
